[workspace]
members = [
  "api",
  "clients/rust/steward",
  "clients/rust/validator_history",
  "keepers/*",
  "programs/*", 
  "sdk",
  "tests",
  "utils/*",
]

resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]
anchor-lang = "0.30.0"
axum = "0.6.2"
borsh = "0.10.0"
clap = { version = "4.3.0", features = ["derive", "env"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
http = { version = "0.2.1" }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.102"
serde_with = "3.9.0"
solana-program = "1.18"
solana-rpc-client = "1.18"
solana-rpc-client-api = "1.18"
solana-sdk = "1.18"
stakenet-sdk = { path = "sdk", version = "0.1.0" }
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "buffer", "timeout", "load-shed"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1.37" }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator-history = { path = "programs/validator-history", version = "0.1.0" }
